--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,19 @@ build-backend = "setuptools.build_meta"
 name = "chromax"
 description = "Breeding simulator based on JAX"
 readme = "README.md"
-requires-python = ">= 3.8"
+requires-python = ">= 3.9"
 authors = [{ name = "Omar G. Younis", email = "omar.younis98@gmail.com" }]
 license = { text = "BSD-3-Clause" }
 keywords = ["Breeding", "simulator", "JAX", "chromosome", "genetics", "bioinformatics",]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
     'Intended Audience :: Science/Research',
 ]
-dependencies = ["numpy", "pandas", "jax", "jaxlib", "jaxtyping"]
+dependencies = ["numpy", "pandas", "jax>=0.4.16", "jaxlib>=0.4.16", "jaxtyping"]
 dynamic = ["version"]
 
 [project.optional-dependencies]
